<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:theme="@style/Theme.MobileNav">

    <com.mapbox.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.mapbox.maps.plugin.attribution.AttributionViewImpl
        android:id="@+id/attribution_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/nav_blue"
        android:contentDescription="@string/search"
        android:src="@drawable/search"
        app:fabSize="mini"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/zoom_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/zoom_out_button"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="0.5dp"
        android:backgroundTint="@color/nav_blue"
        android:contentDescription="@string/zoom_in"
        android:src="@drawable/zoom_in"
        app:fabSize="mini"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/zoom_out_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/recenter_location_button"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="0.5dp"
        android:backgroundTint="@color/nav_blue"
        android:contentDescription="@string/zoom_out"
        android:src="@drawable/zoom_out"
        app:fabSize="mini"
        app:tint="@color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/recenter_location_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/mapbox_link"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="1dp"
        android:backgroundTint="@color/nav_blue"
        android:contentDescription="@string/mapbox_recenter"
        android:src="@drawable/recenter_location"
        app:fabSize="mini"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/mapbox_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="5dp"
        android:layout_toStartOf="@id/openstreetmap_link"
        android:gravity="end"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:text="@string/mapbox_copyright"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/openstreetmap_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:layout_toStartOf="@id/improve_map_link"
        android:gravity="end"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:text="@string/openstreetmap_copyright"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/improve_map_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:gravity="end"
        android:shadowColor="@color/black"
        android:shadowRadius="3"
        android:text="@string/improve_this_map"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/search_coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        android:elevation="@dimen/search_card_elevation"
        android:visibility="gone">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentTop="true"
            android:background="@color/toolbar_background" />

        <ListView
            android:id="@+id/search_list_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/toolbar"
            android:layout_alignParentBottom="true"
            android:fadeScrollbars="false"
            android:visibility="visible" />

    </RelativeLayout>

</RelativeLayout>